# ziplark

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  package.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
.wrangler/cache/: pages.json  wrangler-account.json
crates/packr-cli/: Cargo.toml
crates/packr-cli/src/: main.rs
crates/packr-core/: Cargo.toml
crates/packr-core/src/: lib.rs
crates/packr-core/src/formats/: mod.rs  rar.rs  sevenz.rs  stream.rs  tar.rs  zip.rs
crates/packr-core/tests/: roundtrip.rs
crates/packr-mcp/: Cargo.toml
crates/packr-mcp/src/: main.rs
crates/ziplark-cli/: Cargo.toml
crates/ziplark-cli/src/: main.rs  shell_integration.rs
crates/ziplark-core/: Cargo.toml
crates/ziplark-core/src/: detect.rs  error.rs  lib.rs  model.rs
crates/ziplark-core/src/formats/: iso.rs  mod.rs  rar.rs  stream.rs  tar.rs
crates/ziplark-core/tests/: roundtrip.rs
crates/ziplark-core/tests/fixtures/: plain.iso  sample.iso
crates/ziplark-mcp/: Cargo.toml
crates/ziplark-mcp/src/: main.rs
scripts/: release-macos.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: 32x32.png 32  icon.icns
src-tauri/src/: lib.rs  main.rs
ui/: index.html  main.js  styles.css
web/: _headers  _worker.js  index.html  llms.txt  robots.txt  sitemap.xml  styles.css
