[package]
name = "packr-cli"
description = "Packr command-line archiver — list/extract/create/test any archive."
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "packr"
path = "src/main.rs"

[dependencies]
packr-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
