[package]
name = "packr-mcp"
description = "Packr MCP server — drive the archive engine from any LLM (read-only by default; --allow-write to mutate)."
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "packr-mcp"
path = "src/main.rs"

[dependencies]
packr-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
