[package]
name = "ziplark-cli"
description = "Ziplark command-line archiver — list/extract/create/test any archive."
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ziplark"
path = "src/main.rs"

[dependencies]
ziplark-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
