[package]
name = "ziplark-mcp"
description = "Ziplark MCP server — drive the archive engine from any LLM (read-only by default; --allow-write to mutate)."
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ziplark-mcp"
path = "src/main.rs"

[dependencies]
ziplark-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
